--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -3,104 +3,254 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="schedule.css">
-        <script src="https://cdn.tailwindcss.com"></script>
-
-  <title>Document</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Schedule - Dashboard</title>
 </head>
 <body>
-   <div class="page-content">
-<header class="head">
-  <div class="nav-container">
-    <div class="nav-left">
-      <img class="logo" src="logo.png" alt="">
-      <h2 class="nav-quote">Get this shit done.</h2>
+  <div class="page-content">
+    <!-- === MODERN DASHBOARD HEADER === -->
+    <header class="head">
+      <div class="nav-container">
+        <div class="nav-left">
+          <div class="logo">OBIZU</div>
+          <h2 class="nav-quote">Get this shit done.</h2>
+        </div>
+        
+        <nav>
+          <ul class="main-nav">
+            <li><a href="index.html">Dashboard</a></li>
+            <li><a href="lessons.html">Lessons</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle">Daily ▾</a>
+              <ul class="dropdown-menu">
+                <li><a href="daily.html">Daily</a></li>
+                <li><a href="weekly.html">Weekly</a></li>
+              </ul>
+            </li>
+            <li><a href="goals.html">Goals</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li><a href="tasks.html">Tasks</a></li>
+            <li><a href="schedule.html" class="active">Schedule</a></li>
+          </ul>
+          <ul class="submenu-panel" id="submenu">
+            <li><a href="daily.html">Daily</a></li>
+            <li><a href="weekly.html">Weekly</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- === MODERN SCHEDULE DASHBOARD === -->
+    <div class="modern-dashboard">
+      <!-- Dashboard Header -->
+      <div class="dashboard-header">
+        <div class="dashboard-header-content">
+          <div class="dashboard-title">
+            <div class="title-icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 7V3m8 4V3m-9 10h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <div class="title-text">
+              <h1>Schedule</h1>
+              <p>Your 30-day planning overview</p>
+            </div>
+          </div>
+          <button class="action-btn" id="quick-actions-btn">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="12" cy="12" r="1"/>
+              <circle cx="19" cy="12" r="1"/>
+              <circle cx="5" cy="12" r="1"/>
+            </svg>
+            Quick Actions
+          </button>
+        </div>
+      </div>
+
+      <!-- Schedule Content -->
+      <div class="schedule-content">
+        <!-- 30-Day Grid -->
+        <div id="schedule-container" class="schedule-grid">
+          <!-- JS will insert 30 day cards and expandable sections here -->
+        </div>
+      </div>
     </div>
 
-    <div class="nav-right">
-      <button class="hamburger" aria-label="Toggle menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
+    <!-- === Template for Each Day Section (clone and fill with cards) === -->
+    <template id="day-expand-template">
+      <div class="day-expand content-card">
+        <!-- Tasks -->
+        <section class="content-card tasks-card">
+          <div class="card-header">
+            <div class="card-title">
+              <div class="title-icon">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 11l3 3L22 4"/>
+                  <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/>
+                </svg>
+              </div>
+              <h3>Tasks</h3>
+            </div>
+          </div>
+          <div class="card-content">
+            <div class="task-container">
+              <!-- Task cards go here -->
+            </div>
+          </div>
+        </section>
 
-      <nav>
-        <ul class="main-nav">
-          <li><a href="index.html">Home</a></li>
-          
-          <li><a href="lessons.html">Lessons</a></li>
+        <!-- Goals -->
+        <section class="content-card goals-card">
+          <div class="card-header">
+            <div class="card-title">
+              <div class="title-icon">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                </svg>
+              </div>
+              <h3>Goals</h3>
+            </div>
+          </div>
+          <div class="card-content">
+            <div class="goal-container">
+              <!-- Goal cards go here -->
+            </div>
+          </div>
+        </section>
 
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle">Daily ▾</a>
+        <!-- Lessons -->
+        <section class="content-card lessons-card">
+          <div class="card-header">
+            <div class="card-title">
+              <div class="title-icon">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M2 3h6a4 4 0 014 4v14a3 3 0 00-3-3H2z"/>
+                  <path d="M22 3h-6a4 4 0 00-4 4v14a3 3 0 013-3h7z"/>
+                </svg>
+              </div>
+              <h3>Lessons</h3>
+            </div>
+          </div>
+          <div class="card-content">
+            <div class="lesson-container">
+              <!-- Lesson cards go here -->
+            </div>
+          </div>
+        </section>
+      </div>
+    </template>
 
-            <!-- Desktop dropdown menu -->
-            <ul class="dropdown-menu">
-              <li><a href="daily.html">Daily</a></li>
-              <li><a href="weekly.html">Weekly</a></li>
-            </ul>
-          </li>
+    <!-- Desktop Quick Actions Drawer -->
+    <div id="desktopDrawer" class="desktop-drawer hidden">
+      <div class="desktop-drawer__content">
+        <div class="desktop-drawer__header">
+          <h3 class="desktop-drawer__title">Quick Actions</h3>
+          <button class="desktop-drawer__close" id="desktop-drawer-close">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M18 6L6 18M6 6l12 12"/>
+            </svg>
+          </button>
+        </div>
+        <div class="desktop-drawer__actions">
+          <button class="desktop-action-btn task-action" data-action="task">
+            <div class="action-icon">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M9 11l3 3L22 4"/>
+                <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/>
+              </svg>
+            </div>
+            <div class="action-text">
+              <div class="action-title">New Task</div>
+              <div class="action-subtitle">Add a new task</div>
+            </div>
+          </button>
+          <button class="desktop-action-btn goal-action" data-action="goal">
+            <div class="action-icon">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+              </svg>
+            </div>
+            <div class="action-text">
+              <div class="action-title">New Goal</div>
+              <div class="action-subtitle">Set a new goal</div>
+            </div>
+          </button>
+          <button class="desktop-action-btn lesson-action" data-action="lesson">
+            <div class="action-icon">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M2 3h6a4 4 0 014 4v14a3 3 0 00-3-3H2z"/>
+                <path d="M22 3h-6a4 4 0 00-4 4v14a3 3 0 013-3h7z"/>
+              </svg>
+            </div>
+            <div class="action-text">
+              <div class="action-title">New Lesson</div>
+              <div class="action-subtitle">Add a new lesson</div>
+            </div>
+          </button>
+        </div>
+      </div>
+    </div>
 
-          <li><a href="goals.html">Goals</a></li>
-          <li><a href="notes.html">Notes</a></li>
-          <li><a href="tasks.html">Tasks</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
+    <!-- Mobile Quick Actions Drawer -->
+    <div id="mobileDrawer" class="drawer-modal hidden">
+      <div class="drawer__content">
+        <div class="drawer__header">
+          <h3>Quick Actions</h3>
+          <button class="drawer__close" id="mobile-drawer-close">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M18 6L6 18M6 6l12 12"/>
+            </svg>
+          </button>
+        </div>
+        <ul class="drawer__links">
+          <li><a href="#" data-action="task">📝 New Task</a></li>
+          <li><a href="#" data-action="goal">🎯 New Goal</a></li>
+          <li><a href="#" data-action="lesson">📚 New Lesson</a></li>
         </ul>
+      </div>
+    </div>
 
-        <!-- Mobile slide-in submenu -->
-        <ul class="submenu-panel" id="submenu">
-          <li><a href="daily.html">Daily</a></li>
-          <li><a href="weekly.html">Weekly</a></li>
-        </ul>
-      </nav>
+    <!-- Task Modal -->
+    <div id="taskPopup" class="modal hidden">
+      <div class="modal__content card--tasks">
+        <div class="modal__title">Add New Task</div>
+        <button class="modal__close" id="task-close">×</button>
+        <form class="modal__form" id="taskForm">
+          <input type="text" id="taskInput" placeholder="Enter task..." required>
+          <button type="submit" class="modal__submit">Add Task</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Goal Modal -->
+    <div id="goalPopup" class="modal hidden">
+      <div class="modal__content card--goals">
+        <div class="modal__title">Add New Goal</div>
+        <button class="modal__close" id="goal-close">×</button>
+        <form class="modal__form" id="goalForm">
+          <input type="text" id="goalInput" placeholder="Enter goal..." required>
+          <button type="submit" class="modal__submit">Add Goal</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Lesson Modal -->
+    <div id="lessonPopup" class="modal hidden">
+      <div class="modal__content card--lessons">
+        <div class="modal__title">Add New Lesson</div>
+        <button class="modal__close" id="lesson-close">×</button>
+        <form class="modal__form" id="lessonForm">
+          <input type="text" id="lessonInput" placeholder="Enter lesson..." required>
+          <button type="submit" class="modal__submit">Add Lesson</button>
+        </form>
+      </div>
     </div>
   </div>
-</header>
-<body class="text-white">
 
-    <h1 id="heading-schedule" class="text-center text-xl mt-4 mb-6">Schedule</h1>
-
-    <!-- === 30-Day Grid === -->
-    <div id="schedule-container" class="grid grid-cols-1 sm:grid-cols-2 gap-4 px-4 pb-16">
-      <!-- JS will insert 30 day cards and expandable sections here -->
-    </div>
-  </div>
-
-  <!-- === Template for Each Day Section (clone and fill with cards) === -->
-  <template id="day-expand-template">
-    <div class="day-expand bg-[#1f1f1f] p-4 rounded-xl shadow-lg mt-2 flex flex-col gap-4">
-      <!-- Tasks -->
-<section class="bg-[#181818] text-[#e4e4e7] rounded-2xl p-4 shadow-[0_6px_20px_rgba(0,0,0,0.45)] flex flex-col gap-3">
-        <h3 class="text-sm text-[#f0f0f0] mb-2">Tasks</h3>
-        <div class="task-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
-          <!-- Task cards go here -->
-        </div>
-      </section>
-
-      <!-- Goals -->
-<section class="bg-[#181818] text-[#e4e4e7] rounded-2xl p-4 shadow-[0_6px_20px_rgba(0,0,0,0.45)] flex flex-col gap-3">
-        <h3 class="text-sm text-[#f0f0f0] mb-2">Goals</h3>
-        <div class="goal-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
-          <!-- Goal cards go here -->
-        </div>
-      </section>
-
-      <!-- Lessons -->
-<section class="bg-[#181818] text-[#e4e4e7] rounded-2xl p-4 shadow-[0_6px_20px_rgba(0,0,0,0.45)] flex flex-col gap-3">
-        <h3 class="text-sm text-[#f0f0f0] mb-2">Lessons</h3>
-        <div class="lesson-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
-          <!-- Lesson cards go here -->
-        </div>
-      </section>
-
-      <!-- Notes -->
-
-    </div>
-  </template>
-
-  </div>
+  <!-- Footer -->
   <footer class="footer">
     <span>Eat</span>
     <span>Sleep</span>
@@ -108,21 +258,19 @@
     <span>Repeat</span>
   </footer>
 
-  
   <!-- Site Links Drawer -->
-<div id="siteLinksDrawer" class="pointer-events-none fixed bottom-[120px] left-1/2 transform -translate-x-[45%] opacity-0 scale-95 transition-all duration-300 w-40 bg-[#1a1a1a] text-white p-3 rounded-xl shadow-lg z-50">
-  <div class="flex flex-col space-y-3 text-sm">
-    <a href="index.html" class="hover:text-[#b91c1c]">Home</a>
-    <a href="schedule.html" class="hover:text-[#b91c1c]">Schedule</a>
-    <a href="daily.html" class="hover:text-[#b91c1c]">Daily</a>
-    <a href="weekly.html" class="hover:text-[#b91c1c]">Weekly</a>
-    <a href="goals.html" class="hover:text-[#b91c1c]">Goals</a>
-    <a href="tasks.html" class="hover:text-[#b91c1c]">Tasks</a>
-    <a href="lessons.html" class="hover:text-[#b91c1c]">Lessons</a>
-    <a href="notes.html" class="hover:text-[#b91c1c]">Notes</a>
+  <div id="siteLinksDrawer" class="pointer-events-none fixed bottom-[120px] left-1/2 transform -translate-x-[45%] opacity-0 scale-95 transition-all duration-300 w-40 bg-[#1a1a1a] text-white p-3 rounded-xl shadow-lg z-50">
+    <div class="flex flex-col space-y-3 text-sm">
+      <a href="index.html" class="hover:text-[#b91c1c]">Home</a>
+      <a href="schedule.html" class="hover:text-[#b91c1c]">Schedule</a>
+      <a href="daily.html" class="hover:text-[#b91c1c]">Daily</a>
+      <a href="weekly.html" class="hover:text-[#b91c1c]">Weekly</a>
+      <a href="goals.html" class="hover:text-[#b91c1c]">Goals</a>
+      <a href="tasks.html" class="hover:text-[#b91c1c]">Tasks</a>
+      <a href="lessons.html" class="hover:text-[#b91c1c]">Lessons</a>
+      <a href="notes.html" class="hover:text-[#b91c1c]">Notes</a>
+    </div>
   </div>
-</div>
-
 
   <!-- Bottom Nav (mobile only) -->
   <div class="block md:hidden">
@@ -155,7 +303,7 @@
     </nav>
   </div>
 
-  <script  src="schedule.js"></script>
+  <script src="schedule.js"></script>
   <script src="nav.js"></script>
 </body>
 </html>
