--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -59,193 +59,100 @@
               <p>Your 30-day planning overview</p>
             </div>
           </div>
-          <button class="action-btn" id="quick-actions-btn">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="12" cy="12" r="1"/>
-              <circle cx="19" cy="12" r="1"/>
-              <circle cx="5" cy="12" r="1"/>
-            </svg>
-            Quick Actions
-          </button>
         </div>
       </div>
 
       <!-- Schedule Content -->
       <div class="schedule-content">
-        <!-- 30-Day Grid -->
-        <div id="schedule-container" class="schedule-grid">
-          <!-- JS will insert 30 day cards and expandable sections here -->
+        <!-- Calendar Header -->
+        <div class="calendar-header">
+          <div class="calendar-nav">
+            <button id="prev-month" class="calendar-nav-btn">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="15,18 9,12 15,6"/>
+              </svg>
+            </button>
+            <h2 id="current-month" class="calendar-title">December 2024</h2>
+            <button id="next-month" class="calendar-nav-btn">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="9,18 15,12 9,6"/>
+              </svg>
+            </button>
+          </div>
+        </div>
+
+        <!-- Calendar Grid -->
+        <div class="calendar-grid">
+          <!-- Day Headers -->
+          <div class="calendar-day-headers">
+            <div class="day-header">Sun</div>
+            <div class="day-header">Mon</div>
+            <div class="day-header">Tue</div>
+            <div class="day-header">Wed</div>
+            <div class="day-header">Thu</div>
+            <div class="day-header">Fri</div>
+            <div class="day-header">Sat</div>
+          </div>
+          
+          <!-- Calendar Days -->
+          <div id="calendar-days" class="calendar-days">
+            <!-- JS will populate calendar days here -->
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- === Template for Each Day Section (clone and fill with cards) === -->
-    <template id="day-expand-template">
-      <div class="day-expand content-card">
-        <!-- Tasks -->
-        <section class="content-card tasks-card">
-          <div class="card-header">
-            <div class="card-title">
-              <div class="title-icon">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M9 11l3 3L22 4"/>
-                  <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/>
+    <!-- Day Detail Modal -->
+    <div id="dayModal" class="modal hidden">
+      <div class="modal__content">
+        <div class="modal__title">
+          <span id="modal-day-title">Day Details</span>
+        </div>
+        <button class="modal__close" id="day-modal-close">×</button>
+        <div class="modal__body">
+          <div class="day-details">
+            <!-- Tasks Section -->
+            <div class="detail-section">
+              <h3 class="detail-section-title">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                  <polyline points="22,4 12,14.01 9,11.01"/>
                 </svg>
+                Tasks
+              </h3>
+              <div id="modal-tasks" class="detail-items">
+                <!-- Tasks will be populated here -->
               </div>
-              <h3>Tasks</h3>
             </div>
-          </div>
-          <div class="card-content">
-            <div class="task-container">
-              <!-- Task cards go here -->
-            </div>
-          </div>
-        </section>
 
-        <!-- Goals -->
-        <section class="content-card goals-card">
-          <div class="card-header">
-            <div class="card-title">
-              <div class="title-icon">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <!-- Goals Section -->
+            <div class="detail-section">
+              <h3 class="detail-section-title">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
                 </svg>
+                Goals
+              </h3>
+              <div id="modal-goals" class="detail-items">
+                <!-- Goals will be populated here -->
               </div>
-              <h3>Goals</h3>
             </div>
-          </div>
-          <div class="card-content">
-            <div class="goal-container">
-              <!-- Goal cards go here -->
-            </div>
-          </div>
-        </section>
 
-        <!-- Lessons -->
-        <section class="content-card lessons-card">
-          <div class="card-header">
-            <div class="card-title">
-              <div class="title-icon">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <!-- Lessons Section -->
+            <div class="detail-section">
+              <h3 class="detail-section-title">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M2 3h6a4 4 0 014 4v14a3 3 0 00-3-3H2z"/>
                   <path d="M22 3h-6a4 4 0 00-4 4v14a3 3 0 013-3h7z"/>
                 </svg>
+                Lessons
+              </h3>
+              <div id="modal-lessons" class="detail-items">
+                <!-- Lessons will be populated here -->
               </div>
-              <h3>Lessons</h3>
             </div>
           </div>
-          <div class="card-content">
-            <div class="lesson-container">
-              <!-- Lesson cards go here -->
-            </div>
-          </div>
-        </section>
-      </div>
-    </template>
-
-    <!-- Desktop Quick Actions Drawer -->
-    <div id="desktopDrawer" class="desktop-drawer hidden">
-      <div class="desktop-drawer__content">
-        <div class="desktop-drawer__header">
-          <h3 class="desktop-drawer__title">Quick Actions</h3>
-          <button class="desktop-drawer__close" id="desktop-drawer-close">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M18 6L6 18M6 6l12 12"/>
-            </svg>
-          </button>
         </div>
-        <div class="desktop-drawer__actions">
-          <button class="desktop-action-btn task-action" data-action="task">
-            <div class="action-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M9 11l3 3L22 4"/>
-                <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/>
-              </svg>
-            </div>
-            <div class="action-text">
-              <div class="action-title">New Task</div>
-              <div class="action-subtitle">Add a new task</div>
-            </div>
-          </button>
-          <button class="desktop-action-btn goal-action" data-action="goal">
-            <div class="action-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-              </svg>
-            </div>
-            <div class="action-text">
-              <div class="action-title">New Goal</div>
-              <div class="action-subtitle">Set a new goal</div>
-            </div>
-          </button>
-          <button class="desktop-action-btn lesson-action" data-action="lesson">
-            <div class="action-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M2 3h6a4 4 0 014 4v14a3 3 0 00-3-3H2z"/>
-                <path d="M22 3h-6a4 4 0 00-4 4v14a3 3 0 013-3h7z"/>
-              </svg>
-            </div>
-            <div class="action-text">
-              <div class="action-title">New Lesson</div>
-              <div class="action-subtitle">Add a new lesson</div>
-            </div>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Mobile Quick Actions Drawer -->
-    <div id="mobileDrawer" class="drawer-modal hidden">
-      <div class="drawer__content">
-        <div class="drawer__header">
-          <h3>Quick Actions</h3>
-          <button class="drawer__close" id="mobile-drawer-close">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M18 6L6 18M6 6l12 12"/>
-            </svg>
-          </button>
-        </div>
-        <ul class="drawer__links">
-          <li><a href="#" data-action="task">📝 New Task</a></li>
-          <li><a href="#" data-action="goal">🎯 New Goal</a></li>
-          <li><a href="#" data-action="lesson">📚 New Lesson</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Task Modal -->
-    <div id="taskPopup" class="modal hidden">
-      <div class="modal__content card--tasks">
-        <div class="modal__title">Add New Task</div>
-        <button class="modal__close" id="task-close">×</button>
-        <form class="modal__form" id="taskForm">
-          <input type="text" id="taskInput" placeholder="Enter task..." required>
-          <button type="submit" class="modal__submit">Add Task</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Goal Modal -->
-    <div id="goalPopup" class="modal hidden">
-      <div class="modal__content card--goals">
-        <div class="modal__title">Add New Goal</div>
-        <button class="modal__close" id="goal-close">×</button>
-        <form class="modal__form" id="goalForm">
-          <input type="text" id="goalInput" placeholder="Enter goal..." required>
-          <button type="submit" class="modal__submit">Add Goal</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Lesson Modal -->
-    <div id="lessonPopup" class="modal hidden">
-      <div class="modal__content card--lessons">
-        <div class="modal__title">Add New Lesson</div>
-        <button class="modal__close" id="lesson-close">×</button>
-        <form class="modal__form" id="lessonForm">
-          <input type="text" id="lessonInput" placeholder="Enter lesson..." required>
-          <button type="submit" class="modal__submit">Add Lesson</button>
-        </form>
       </div>
     </div>
   </div>
