--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,10 @@
 
   <!-- Splash Screen -->
   <div id="splash-screen">
-    <img id="splash-img" src="splash.webp" alt="Splash animation" />
+    <video id="splash-video" autoplay muted playsinline>
+      <source src="screen.mp4" type="video/mp4">
+      <img id="splash-img" src="splash.webp" alt="Splash animation" />
+    </video>
   </div>
 
   <div class="page-content">
